# weather-ai-agent

./: .env.sample  .gitignore  LICENCE  README.md  main.py  pyproject.toml  requirements.txt  setup.py  weather.spec
lib/: __init__.py  ai.py  text.py  utils.py  weather.py
tests/: env_test.py  fetch_test.py
