[project]
name = "weatherapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "llm-ollama>=0.9.1",
    "py2exe>=0.13.0.2",
    "pyinstaller>=6.13.0",
    "pytest>=8.3.5",
    "python-weather>=2.0.7",
    "smartfunc>=0.2.0",
    "termcolor>=3.0.1",
]
